# conda-mirror

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  diff-tar.md  pixi.toml  pyproject.toml  run_tests.py  setup.py  versioneer.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  chore.yml  ci.yml  pre-commit.yaml  scorecard.yml  test.yaml
conda_mirror/: _version.py  conda_mirror.py  diff_tar.py  versionspec.py
news/: TEMPLATE.md
src/: config.rs  lib.rs  main.rs
test/: test_conda_mirror.py  test_diff_tar.py
tests/resources/: exclude.yml  include-exclude.yml  include.yml
