[package]
name = "conda-mirror"
description = "Mirror conda channels"
version = "0.11.0"
edition = "2021"

[features]
default = ["native-tls"]
native-tls = [
  "rattler_networking/native-tls",
  "rattler_repodata_gateway/native-tls",
]
rustls-tls = [
  "rattler_networking/rustls-tls",
  "rattler_repodata_gateway/rustls-tls",
]

[dependencies]
clap = { version = "4.5.35", features = ["derive", "string", "env"] }
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
console = "0.15.10"
futures = "0.3.31"
glob = "0.3.2"
indicatif = "0.17.11"
miette = { version = "7.5.0", features = ["fancy"] }
opendal = { version = "0.53.0", features = ["services-s3", "services-fs"] }
rattler_conda_types = "0.32.0"
rattler_digest = "1.1.1"
rattler_networking = { version = "0.22.12", features = [
  "s3",
], default-features = false }
rattler_repodata_gateway = { version = "0.22.5", default-features = false }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
serde = "1.0.218"
serde_json = "1.0.139"
serde_yml = "0.0.12"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "default",
  "env-filter",
] }
url = "2.5.4"
