[package]
name = "conda-mirror"
description = "Mirror conda channels"
version = "0.11.2"
edition = "2024"

[features]
default = ["native-tls"]
native-tls = [
  "rattler_networking/native-tls",
  "rattler_repodata_gateway/native-tls",
  "rattler_index/native-tls",
]
rustls-tls = [
  "rattler_networking/rustls-tls",
  "rattler_repodata_gateway/rustls-tls",
  "rattler_index/rustls-tls",
]

[dependencies]
clap = { version = "4.5.38", features = ["derive", "string", "env"] }
clap-verbosity-flag = { version = "3.0.3", features = ["tracing"] }
console = "0.15.11"
futures = "0.3.31"
glob = "0.3.2"
indicatif = "0.17.11"
miette = { version = "7.6.0", features = ["fancy"] }
opendal = { version = "0.53.3", features = ["services-s3", "services-fs"] }
rattler_conda_types = "0.35.0"
rattler_digest = "1.1.2"
rattler_index = { version = "0.23.0", default-features = false }
rattler_networking = { version = "0.25.0", features = [
  "s3",
], default-features = false }
rattler_repodata_gateway = { version = "0.23.0", default-features = false }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yml = "0.0.12"
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "default",
  "env-filter",
] }
url = "2.5.4"
